--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "flowbite-vue": "^0.1.2",
     "joi": "^17.12.1",
     "jquery": "^3.7.1",
+    "js-cookie": "^3.0.5",
+    "swiper": "^11.0.7",
     "ts-node": "^10.9.2",
     "vue": "^3.3.7",
     "vue-meta": "^3.0.0-alpha.8",
@@ -30,6 +32,7 @@
     "@tsconfig/node18": "^18.2.2",
     "@types/bootstrap": "^5.2.9",
     "@types/jquery": "^3.5.27",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^18.18.5",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vue/tsconfig": "^0.4.0",
